Path del socket actualizado

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <script>
 
 
-        const socket = io('http://localhost:3000');
+        const socket = io('https://ikeda-react-socket-server.herokuapp.com/');
 
         const $form = document.querySelector("#miFormulario");
         const $mensaje = document.querySelector("#txtMensaje");
